Amend css to fix instagram logo alignment

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,11 @@ p, h1, h2, h3, h4 {
   font-size: 15px;
 }
 
+#instagram-hyperlink {
+  display: flex;
+  align-items: center;
+}
+
 /* Artworks */
 
 #artworks-component {
@@ -211,7 +216,7 @@ p, h1, h2, h3, h4 {
     margin-bottom: 23px;
   }
 
-  .about-description {
+  .about-description, #footer-copyright {
     font-size: 14px;
   }
 }
@@ -233,7 +238,7 @@ p, h1, h2, h3, h4 {
     margin-bottom: 21px;
   }
 
-  .about-description {
+  .about-description, #footer-copyright {
     font-size: 13px;
   }
 }
@@ -255,7 +260,7 @@ p, h1, h2, h3, h4 {
     margin-bottom: 19px;
   }
 
-  .about-description {
+  .about-description, #footer-copyright {
     font-size: 12px;
   }
 }
